--- a/css/slides.css
+++ b/css/slides.css
@@ -915,6 +915,7 @@ contact page
     .popup #team .fix-10-12 {padding-top: 15%;}
     #ispect-details .margin-top-1 {margin-top: 30% !important;}
     #ispect-details .col-6-12 {max-width: 100%;}
+    #news-title {margin-top: 25px;}
 }
 /* iphone6+ Portrait and Landscape */
 @media only screen
