--- a/css/slides.css
+++ b/css/slides.css
@@ -143,7 +143,7 @@ h3 {
 }
 
 p {
-  font-size: 22px;
+  font-size: 20px;
   line-height: 1.5;
   margin-bottom: 30px;
   opacity: 0.9;
@@ -173,48 +173,7 @@ p.small {
   }
 }
 /* buttons */
-.button {
-  display: inline-block;
-  border-radius: 3px;
-  padding: 13px 22px 16px;
-  color: #fff;
-  border: none;
-  outline: none;
-  text-decoration: none;
-  background: #202020;
-  font-size: 20px;
-  font-weight: 600;
-  text-align: center;
-  vertical-align: top;
-  cursor: pointer;
-  overflow: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: relative;
-  white-space: nowrap;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  box-shadow: inset 0 -100px 0 transparent;
-  -webkit-appearance: none;
-  margin-bottom: 20px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-transition: 0.25s;
-  transition: 0.25s;
-}
-.button svg {
-  width: 22px;
-  height: 22px;
-  vertical-align: bottom;
-  margin-right: 14px;
-  pointer-events: none !important;
-  position: relative;
-}
-.button svg * {
-  pointer-events: none !important;
-}
+
 .button.actionButton {
   display: inline-block;
   height: 50px;
@@ -424,6 +383,7 @@ p.small {
 /*
   custom css not framework related
 */
+#brf-services p, #entreprenad-services p, #privat-services p {margin-bottom: 10px !important;}
 #news {
   overflow-y: scroll;
   max-height: 70vh;
@@ -435,7 +395,7 @@ p.small {
   float: left !important;
 }
 .panel .menu { cursor:pointer;}
-.dropdown.customDropdown {
+/*.dropdown.customDropdown {
   padding:10px 0;
 }
 .dropdown.customDropdown li:not(.link),
@@ -472,7 +432,7 @@ p.small {
    transition: transform 0.35s, opacity 0.35s, box-shadow 0.35s, -webkit-transform 0.35s;
    /* share */
  }
-
+/*
  .dropdown:not(.show) {
    pointer-events: none;
    opacity: 0;
@@ -559,7 +519,7 @@ p.small {
  .scroll .dropdown {
    position: absolute;
    top: 0;
- }
+ }*/
 #bm-location .fix-12-12 {
   margin: 50px;
 }
@@ -907,6 +867,408 @@ section.network .logos .row>div {
 section.network .logos .row>div:nth-child(odd) {
 	transform: translateY(-50%)
 }
+/*morph-dropdown*/
+.cd-morph-dropdown #logo {line-height: 50px;}
+.cd-morph-dropdown {
+
+}
+.cd-morph-dropdown::before {
+  /* never visible - used in JS to check mq */
+  content: 'mobile';
+  display: none;
+}
+.cd-morph-dropdown .nav-trigger {
+  /* menu icon - visible on small screens only */
+  position: absolute;
+  z-index: 6000;
+  top: 6px;
+  right: 8px;
+  height: 60px;
+  width: 60px;
+  /* replace text with icon */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  color: transparent;
+}
+.cd-morph-dropdown .nav-trigger span, .cd-morph-dropdown .nav-trigger span::after, .cd-morph-dropdown .nav-trigger span::before {
+  /* these are the 3 lines of the menu icon */
+  position: absolute;
+  background-color: #1072bb;
+  height: 3px;
+  width: 26px;
+}
+.cd-morph-dropdown .nav-trigger span {
+  left: 50%;
+  top: 50%;
+  bottom: auto;
+  right: auto;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  -webkit-transition: background-color .3s;
+  transition: background-color .3s;
+}
+.cd-morph-dropdown .nav-trigger span::after, .cd-morph-dropdown .nav-trigger span::before {
+  content: '';
+  left: 0;
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s;
+}
+.cd-morph-dropdown .nav-trigger span::before {
+  -webkit-transform: translateY(-9px);
+      -ms-transform: translateY(-9px);
+          transform: translateY(-9px);
+}
+.cd-morph-dropdown .nav-trigger span::after {
+  -webkit-transform: translateY(9px);
+      -ms-transform: translateY(9px);
+          transform: translateY(9px);
+}
+.cd-morph-dropdown.nav-open .nav-trigger span {
+  background-color: transparent;
+}
+.cd-morph-dropdown.nav-open .nav-trigger span::before {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.cd-morph-dropdown.nav-open .nav-trigger span::after {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.cd-morph-dropdown .main-nav {
+  display: none;
+}
+.cd-morph-dropdown .morph-dropdown-wrapper {
+  display: none;
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 90%;
+  margin: 5%;
+  box-shadow: 0 50px 100px rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 5px 15px rgba(0,0,0,.1);
+   border-radius: 4px;
+  background-color: #FFFFFF;
+}
+.cd-morph-dropdown.nav-open .morph-dropdown-wrapper {
+  display: block;
+  z-index: 6000;
+}
+.cd-morph-dropdown .dropdown-list > ul > li {
+padding: 20px 0 15px;
+}
+.cd-morph-dropdown .dropdown-list {
+  max-height: 500px;
+    overflow-y: auto;
+}
+.dropdown-list a {
+    padding: 0 30px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 50px;
+ }
+.cd-morph-dropdown h4 {
+      font-size: 14px;
+    font-weight: 600;
+    letter-spacing: .025em;
+    color: #8898aa;
+    text-transform: uppercase;
+    margin: -5px 0 0 30px;
+    padding-bottom: 10px;
+}
+
+.cd-morph-dropdown .morph-dropdown-content li::after {
+  clear: both;
+  content: "";
+  display: block;
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content li {
+
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content a {
+  display: block;
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content a::before {
+  /* icon on the left */
+  content: '';
+  display: inline-block;
+  float: left;
+  height: 54px;
+  width: 54px;
+  margin-right: .6em;
+  background: red;
+  border-radius: 50%;
+  -webkit-transition: background .2s;
+  transition: background .2s;
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content a span, .cd-morph-dropdown .gallery .content a em {
+  display: block;
+
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content a span {
+
+}
+.cd-morph-dropdown .gallery .morph-dropdown-content a:hover::before {
+  background-color: #1A1A1A;
+}
+.cd-morph-dropdown .gallery li:nth-of-type(1) a::before {
+  background: #f4e58a url(../assets/svg/icons.svg) no-repeat 0 0;
+}
+.cd-morph-dropdown .gallery li:nth-of-type(2) a::before {
+  background: #F4AF6D url(../assets/svg/icons.svg) no-repeat -54px 0;
+}
+.cd-morph-dropdown .gallery li:nth-of-type(3) a::before {
+  background: #DB6356 url(../assets/svg/icons.svg) no-repeat -108px 0;
+}
+.cd-morph-dropdown .gallery li:nth-of-type(4) a::before {
+  background: #8D4645 url(../assets/svg/icons.svg) no-repeat -162px 0;
+}
+.cd-morph-dropdown .links .content > ul > li {
+  margin-top: 1em;
+}
+.cd-morph-dropdown .links-list a,
+.cd-morph-dropdown .btn {
+  display: block;
+  margin-left: 14px;
+  line-height: 1.6;
+}
+.cd-morph-dropdown .morph-dropdown-content h2 {
+
+}
+@media only screen and (min-width: 1000px) {
+  .cd-morph-dropdown {
+    position: fixed;
+    z-index: 12;
+    width: 100%;
+    height: 60px;
+  }
+  .cd-morph-dropdown::before {
+    content: 'desktop';
+  }
+  .cd-morph-dropdown .nav-trigger {
+    display: none;
+  }
+  .cd-morph-dropdown .main-nav {
+    display: flex;
+  }
+  .cd-morph-dropdown .main-nav > ul > li {
+    display: inline-block;
+    margin: 0 12px 0 12px;
+    font-size: 16px;
+    line-height: 45px;
+  }
+  .cd-morph-dropdown .main-nav > ul > li > a {
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: opacity .2s;
+    transition: opacity .2s;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .main-nav > ul > li > a {
+    /* main navigation hover effect - on hover, reduce opacity of elements not hovered over */
+    opacity: .6;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .main-nav > ul > li.active > a {
+    opacity: 1;
+  }
+  .cd-morph-dropdown .morph-dropdown-wrapper {
+    /* dropdown wrapper - used to create the slide up/slide down effect when dropdown is revealed/hidden */
+    display: block;
+    top: 5px;
+    /* overwrite mobile style */
+    width: auto;
+    padding: 0;
+    box-shadow: none;
+    background-color: transparent;
+    /* Force Hardware acceleration */
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    will-change: transform;
+    -webkit-transform: translateY(20px);
+        -ms-transform: translateY(20px);
+            transform: translateY(20px);
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .morph-dropdown-wrapper {
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+  }
+  .cd-morph-dropdown .dropdown-list {
+    position: absolute;
+    top: 0;
+    left: -66px;
+    visibility: hidden;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    will-change: transform, width, height;
+    -webkit-transition: visibility .3s;
+    transition: visibility .3s;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
+  }
+  .no-csstransitions .cd-morph-dropdown .dropdown-list {
+    display: none;
+  }
+  .cd-morph-dropdown .dropdown-list::before {
+    /* dropdown top triangle */
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    right: auto;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    height: 0;
+    width: 0;
+    border: 8px solid transparent;
+    border-bottom-color: #FFFFFF;
+    opacity: 0;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+  }
+  .cd-morph-dropdown .dropdown-list > ul {
+    position: relative;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .dropdown-list {
+    visibility: visible;
+    -webkit-transition: width .3s, height .3s, -webkit-transform .3s;
+    transition: width .3s, height .3s, -webkit-transform .3s;
+    transition: transform .3s, width .3s, height .3s;
+    transition: transform .3s, width .3s, height .3s, -webkit-transform .3s;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .dropdown-list::before {
+    opacity: 1;
+  }
+  .cd-morph-dropdown .dropdown {
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    width: 100%;
+    -webkit-transition: opacity .3s, visibility .3s;
+    transition: opacity .3s, visibility .3s;
+  }
+  .cd-morph-dropdown .dropdown.active {
+    opacity: 1;
+    visibility: visible;
+  }
+  .cd-morph-dropdown .dropdown.move-left .morph-dropdown-content {
+    -webkit-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+            transform: translateX(-100px);
+  }
+  .cd-morph-dropdown .dropdown.move-right .morph-dropdown-content {
+    -webkit-transform: translateX(100px);
+        -ms-transform: translateX(100px);
+            transform: translateX(100px);
+  }
+  .cd-morph-dropdown .label {
+    /* hide the label on bigger devices */
+    display: none;
+  }
+  .cd-morph-dropdown .morph-dropdown-content {
+    padding: 2.2em 1.8em;
+    -webkit-transition: -webkit-transform .3s;
+    transition: -webkit-transform .3s;
+    transition: transform .3s;
+    transition: transform .3s, -webkit-transform .3s;
+    text-align: left;
+  }
+  .cd-morph-dropdown .morph-dropdown-content > ul::after {
+    clear: both;
+    content: "";
+    display: block;
+  }
+  .cd-morph-dropdown .morph-dropdown-content > ul > li {
+    width: 100%;
+    float: left;
+    margin-right: 4%;
+    margin-top: 0;
+  }
+  .cd-morph-dropdown .morph-dropdown-content > ul > li:nth-of-type(2n) {
+    margin-right: 0;
+  }
+  .cd-morph-dropdown .gallery .morph-dropdown-content {
+    /* you need to set a width for the .content elements because they have a position absolute */
+    width: 510px;
+    padding-bottom: .8em;
+  }
+  .cd-morph-dropdown .gallery .morph-dropdown-content li {
+    margin-bottom: 1.8em;
+  }
+  .cd-morph-dropdown .links .morph-dropdown-content > ul > li {
+    margin-top: 0;
+  }
+  .cd-morph-dropdown .links .morph-dropdown-content,
+  .cd-morph-dropdown .button .morph-dropdown-content {
+    width: 390px;
+  }
+  .cd-morph-dropdown .links-list a {
+
+  }
+  .cd-morph-dropdown .btn {
+    display: block;
+    width: 100%;
+    height: 60px;
+    margin: 1.5em 0 0;
+    font-size: 1.8rem;
+    text-align: center;
+    color: #FFFFFF;
+    line-height: 60px;
+    background: #DB6356;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  .cd-morph-dropdown .btn:hover {
+    background: #1A1A1A;
+    color: #FFFFFF;
+  }
+  .cd-morph-dropdown .morph-dropdown-content h2 {
+    text-transform: none;
+    font-weight: normal;
+    margin: 0 0 .6em;
+  }
+  .cd-morph-dropdown .bg-layer {
+    /* morph dropdown background */
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1px;
+    width: 1px;
+    background: #FFFFFF;
+    opacity: 0;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+    -webkit-transform-origin: top left;
+        -ms-transform-origin: top left;
+            transform-origin: top left;
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    will-change: transform;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+  }
+  .cd-morph-dropdown.is-dropdown-visible .bg-layer {
+    opacity: 1;
+    -webkit-transition: opacity .3s, -webkit-transform .3s;
+    transition: opacity .3s, -webkit-transform .3s;
+    transition: transform .3s, opacity .3s;
+    transition: transform .3s, opacity .3s, -webkit-transform .3s;
+  }
+}
 
 /*iphone4+*/
 @media only screen
@@ -933,6 +1295,8 @@ section.network .logos .row>div:nth-child(odd) {
     #news-title {margin-top: 25px;}
     #ispect-projects .wrap {padding: 0 !important;}
     #partners ul{float: none !important;}
+    .cd-morph-dropdown .gallery .morph-dropdown-content a::before {width: 36px;height: 36px;margin-top: 6px;}
+    .cd-morph-dropdown #logo {margin-left: -20px;}
 }
 /* iphone6+ Portrait and Landscape */
 @media only screen
@@ -961,7 +1325,6 @@ section.network .logos .row>div:nth-child(odd) {
    z-index: 200;
    text-align: center;
    font-size: 22px;
-   pointer-events: none;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -webkit-user-select: none;
@@ -1562,31 +1925,9 @@ p.micro, .p.micro {
   width: 100%;
       padding: 15px 0px 15px 0px;
 }
-.map {
-    width: 50%;
-    background-size: cover;
-    z-index: -1;
-    position: absolute;
-    right: 0;
-    margin: -18% 0% 0%;
-    max-width: none;
-}
+
 .container-md {
     height: 460px !important;
-}
-.headquarters h3 {
-    margin-bottom: 0;
-}
-.headquarters:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 71px;
-    height: 71px;
-    left: 20px;
-    top: 50%;
-    margin-top: -36px;
-    background-image: url(../assets/img/backgrounds/sthlm_crown.png);
 }
 h3.small, .h3.small {
     font-size: 20px;
