--- a/css/slides.css
+++ b/css/slides.css
@@ -461,7 +461,7 @@ p.small {
 .dropdown.customDropdown li.link a {
   font-size: 16px;
 	font-weight: 600;
-	padding: 20px 0px 20px 20px;
+	padding: 20px 0px 25px 25px;
   cursor: pointer;
   display: block;
   text-align: left;
@@ -478,7 +478,7 @@ p.small {
  .dropdown {
    position: fixed;
    z-index: 300;
-   width: 20%;
+   width: 23%;
    background: #fff;
    box-shadow: 0 6px 11px 0 rgba(0, 0, 0, 0.15), 0 14px 28px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.05);
    margin-bottom: 50px;
@@ -581,6 +581,15 @@ p.small {
    position: absolute;
    top: 0;
  }
+ .illustration-icon {
+	width: 50px;
+	height: 50px;
+ }
+.customDropdown p {
+	margin-left: 60px;
+margin-top: -45px;
+margin-bottom: 0px;
+}
 #bm-location .fix-12-12 {
 	margin: 50px;
 }
